--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <script src="script.js" type="module"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="score">
-        <div id="player-score">0</div>
-        <div id="computer-score">0</div>
+      <div id="player-score">0</div>
+      <div id="computer-score">0</div>
     </div>
     <div class="ball" id="ball"></div>
     <div class="particle" id="ball"></div>
@@ -20,5 +20,5 @@
     <div class="particle4" id="ball"></div>
     <div class="paddle left" id="player-paddle"></div>
     <div class="paddle right" id="computer-paddle"></div>
-</body>
+  </body>
 </html>
